welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: missing arguments for method max in class dateFashion;
follow this method with `_' if you want to treat it as a partially applied function
	if (max>7){
            ^dateFashion:3: error: missing arguments for method min in class dateFashion;
follow this method with `_' if you want to treat it as a partially applied function
		if(min<2){
                   ^