welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
	if (max>7){
		if(min<2){
			return 0;
		}else{
			return 2;
		}
	}else{
		return 1;
	}
}







def min (a:Int , b:Int): Int = {
	return   (  (a + b - Math.abs(b - a))/2);
}
def max (a:Int , b:Int): Int = {
	return   (  (a + b - Math.abs(b - a))/2);
}
